# web-ide

./: .gitignore  ideas.md  index.html  info.md  logs.md  new-ideas.md  package.json  plan.md  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: llm-wiki.md
public/: .ide-startup.yaml
report/: bug01.md  bug02.md  bug03.md  bug04.md
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  pty.rs  startup.rs  workspace.rs
src/components/: AutoDevPanel.tsx  ContextMenu.tsx  EditorArea.tsx  EditorTabs.tsx  FileTree.tsx  Layout.tsx  ShortcutBar.test.tsx  ShortcutBar.tsx  ShortcutManager.test.tsx  ShortcutManager.tsx  ShortcutTemplateDialog.test.tsx  ShortcutTemplateDialog.tsx  Sidebar.test.tsx  Sidebar.tsx  Splitter.test.tsx  Splitter.tsx  TerminalPanel.tsx
src/components/Terminal/: TerminalTab.tsx
src/hooks/: useFileSyncWatcher.ts  useModeHotkey.test.ts  useModeHotkey.ts  useStartupConfig.test.ts  useStartupConfig.ts
src/orchestrator/: engine.ts  prompts.test.ts  prompts.ts  signals.ts
src/store/: autoDev.test.ts  shortcuts.test.ts  useIdeStore.test.ts  useIdeStore.ts
src/utils/: aiStartup.ts  contextApi.test.ts  contextApi.ts  devHostApi.test.ts  devHostApi.ts  fileTree.test.ts  fileTree.ts  openFolder.test.ts  openFolder.ts  shortcutTemplate.test.ts  shortcutTemplate.ts  shortcutTypes.ts  startup.test.ts  startup.ts  tauriEnv.ts  termSocket.ts  terminalBus.test.ts  terminalBus.ts
vite-plugins/: devHost.ts
