[package]
name = "app"
version = "0.1.0"
description = "Web AI IDE — Tauri shell"
authors = ["web-ide"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
serde_yaml = "0.9"
portable-pty = "0.9"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
